kubernetes/Version1.2/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: alfa-romeo
  labels:
    name: alfa-romeo
